fix glass widgets blurring outside of rounded corners

--- a/src/stylesheet/_common.scss
+++ b/src/stylesheet/_common.scss
@@ -4516,5 +4516,5 @@ pastry-glass-root > frame {
     border-style: solid;
     border-color: transparentize(darken($bg_color, 50%), 0.5);
     border-width: 2px;
-    background-image: image(transparentize($bg_color, 0.4));
+    background-image: image(transparentize($bg_color, 0.28));
 }
